fix background color shade cutoff issue

--- a/prototype/assets/scss/components/_scaffolding.scss
+++ b/prototype/assets/scss/components/_scaffolding.scss
@@ -1,5 +1,5 @@
 body, .application {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   background-color: $gray-color;
